# agile-backlog

./: .agile-backlog.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
.claude/: MEMORY.md  project.json  settings.json  sprint-config.yaml  statusline-command.sh
.claude/commands/: check-comments.md  document.md  fix-bug.md  plan.md  report-bug.md  review.md  sprint-end.md  sprint-execute.md  sprint-plan-next.md  sprint-start.md  test.md
.claude/hooks/: post-read-logger.sh  post-tool-logger.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml
backlog/: active-filter-shown-twice-chip-inside-dropdown-and-below-filter-row.yaml  add-a-time-stamp-to-when-a-card-was-last-edited.yaml  add-a-way-to-see-which-version-is-running-in-the-ui.yaml  add-also-a-done-view.yaml  add-an-option-to-import-a-kanban-board-from-an-existing-project.yaml  add-claude-code-terminal-session.yaml  add-flagged-comments-check-to-sprint-start-process.yaml  add-new-item-from-board-ui.yaml  add-phase-field-to-backlogitem.yaml  add-process-management-tools-review.yaml  add-serve-port-to-sprint-config-yaml.yaml  add-tags-to-tasks.yaml  add-test-plan-field-to-backlogitem.yaml  add-the-project-name-to-the-header-of-the-page.yaml  add-versioning-policy-to-sprint-config-and-auto-tag-on-sprint-end.yaml  agent-notes-on-board-items.yaml  agentic-agile-framework-adopt-template-process-into-agile-backlog.yaml  archiving-of-done-items.yaml  auto-set-phase-when-moving-to-doing.yaml  auto-update-item-phase-during-sprint-execution.yaml  backlog-cards-missing-priority-border-priority-badge-tags-should-match-board-card-design.yaml  backlog-management-mode.yaml  backlog-section-header-missing-no-label-saying-which-section-is-visible.yaml  backlog-sections-not-resizable-drag-handles-don-t-work.yaml  backlog-view-as-sortable-grid-table.yaml  backlog-view-header-needs-design-overhaul-sprint-badge-filters-chips-look-odd.yaml  be-able-to-sort-the-board.yaml  board-as-single-source-of-truth.yaml  board-should-auto-refresh-when-yaml-files-change-on-disk.yaml  bug-backlog-cards-missing-card-styling.yaml  bug-comment-badge-counts-total-instead-of-unresolved-flagged.yaml  bug-comment-icon-doesn-t-indicate-open-comments.yaml  bug-detail-modal-description-not-formatted-not-resizable.yaml  bug-search-input-misaligned-with-filter-dropdowns.yaml  bundled-claude-plugin-ship-sprint-skills-with-package.yaml  card-design-v2.yaml  card-left-part.yaml  card-redesign-reduce-badge-clutter-and-improve-timestamp-visibility.yaml  category-colors.yaml  changelog.yaml  (+118 more)
docs/: CLI.md
docs/guides/: ADOPTION.md  PYPI_PUBLISHING.md
docs/optimization/: README.md
docs/process/: AGENTIC_AGILE_MANIFEST.md  DEFINITION_OF_DONE.md  KANBAN.md  PROJECT_CONTEXT.md  SPRINT_END_CHECKLIST.md  TASK_TEMPLATE.md
docs/prototypes/: backlog-comparison.html
plugin/: plugin.json
plugin/commands/: backlog.md
src/: app.py  cli.py  models.py  schema.yaml  tokens.py  yaml_store.py
tests/: test_app.py  test_cli.py  test_config.py  test_context_report.py  test_drag_drop.py  test_hook_script.py  test_images.py  test_markdown.py  test_models.py  test_pure.py  test_yaml_store.py
(+62 files in other folders)
